# server/docs/swagger.json
@@ -2529,7 +2529,13 @@
                 "description": {
                     "type": "string"
                 },
+                "end_date": {
+                    "type": "string"
+                },
                 "id": {
+                    "type": "string"
+                },
+                "start_date": {
                     "type": "string"
                 },
                 "title": {
@@ -2541,6 +2547,12 @@
             "type": "object",
             "properties": {
                 "description": {
+                    "type": "string"
+                },
+                "end_date": {
+                    "type": "string"
+                },
+                "start_date": {
                     "type": "string"
                 },
                 "title": {
