# server/v1/seasons/models.go
@@ -10,6 +10,8 @@ type Season struct {
 	Id          string    `json:"id"`
 	Title       string    `json:"title"`
 	Description *string   `json:"description"`
+	StartDate   time.Time `json:"start_date"`
+	EndDate     time.Time `json:"end_date"`
 	CreatorId   string    `json:"created_by"`
 	CreatedAt   time.Time `json:"created_at"`
 }
@@ -23,6 +25,8 @@ type SeasonModel struct {
 	Id          string       `json:"id"`
 	Title       string       `json:"title"`
 	Description *string      `json:"description"`
+	StartDate   time.Time    `json:"start_date"`
+	EndDate     time.Time    `json:"end_date"`
 	Creator     CreatorModel `json:"creator"`
 	CreatedAt   time.Time    `json:"created_at"`
 }
@@ -32,9 +36,12 @@ type CreateSeasonRequestModel struct {
 	Description *string    `json:"description"`
 	StartDate   types.Date `json:"start_date"`
 	EndDate     types.Date `json:"end_date"`
+	CreatorId   string     `json:"-"`
 }
 
 type UpdateSeasonRequestModel struct {
-	Title       string  `json:"title"`
-	Description *string `json:"description"`
+	Title       string     `json:"title"`
+	Description *string    `json:"description"`
+	StartDate   types.Date `json:"start_date"`
+	EndDate     types.Date `json:"end_date"`
 }
